# msp430f5529-quickstart

./: Cargo.toml  memory.x
.cargo/: config
examples/: bench.rs  blinky.rs  override-default-handler.rs  timer-oncecell.rs  timer-unsafe.rs  timer.rs
examples/bench/: main.rs  newtypes.rs
src/: main.rs
