[package]
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"
readme = "README.md"
name = "msp430f5529-quickstart"
version = "0.1.0"

[dependencies]
msp430 = "0.2.0"
msp430-rt = "0.2.2"
panic-msp430 = "0.2.0"

[dev-dependencies]
hmac-sha256 = { version = "0.1.7", features=["opt_size"] }
hmac-sha512 = { version = "0.1.8", features=["opt_size"] }
ufmt = "0.1.0"
ufmt-write = "0.1.0"
ed25519-compact = "0.1"

# Use an existing PAC to ensure examples and the crate itself compiles. If
# targeting a different device, you will need to replace all instances of
# the identifier "msp430g2553" with the crate name of your PAC. Your PAC must
# be generated with svd2rust git commit 783fbd0 or later.
[dependencies.msp430f5529]
version = "0.1.0"
features = ["rt"]

# Uncomment for the "timer-oncecell example". The interior mutability type
# OnceCell provides a better size footprint compared to RefCell.
[dev-dependencies.once_cell]
version = "1.7.2"
default_features = false

# Required for `cargo fix` to work!
[[bin]]
name = "msp430f5529-quickstart"
test = false
bench = false

[profile.release]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
# debug = true # Debug _can_ slightly increase size of .text segment.
