[package]
authors = ["William D. Jones <thor0505@comcast.net>"]
edition = "2018"
readme = "README.md"
name = "msp430f5529-quickstart"
version = "0.1.0"

[dependencies]
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
msp430-rt = "0.4.0"
panic-msp430 = "0.4.0"
msp430f5529 = { git = "https://github.com/cr1901/msp430f5529", branch="rt-up-v0.4.0", features = ["rt", "critical-section"] }

[dev-dependencies]
hmac-sha256 = { version = "0.1.7", features=["opt_size"] }
hmac-sha512 = { version = "0.1.8", features=["opt_size"] }
ufmt = "0.1.0"
ufmt-write = "0.1.0"
once_cell = { version = "1.7.2", default_features = false }
fixed = "1.6.0"
fixed-macro = "1.1.1"

# Required for `cargo fix` to work!
[[bin]]
name = "msp430f5529-quickstart"
test = false
bench = false

[profile.release]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
# debug = true # Debug _can_ slightly increase size of .text segment.

[patch.crates-io.fixed-macro]
git = "https://github.com/kvinwang/fixed-macro"
version = "1.1.1"
